--- a/index.html
+++ b/index.html
@@ -6,8 +6,30 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Quickly Setup Your Website</p>
-    <h1>Stepup is designed specially for Startups</h1>
+    <ul>
+        <li>Have any questions?</li>
+        <li><a href="mailto:support@example.com">support@example.com</a></li>
+        <li><a href="tel:+1814251152">+1 814 251 152</a></li>
+    </ul>
+    <ul>
+        <li><a href="">Login</a></li>
+        <li><a href="">Register</a></li>
+    </ul>
+    <img src="img/logo.svg" alt="Logo">
+    <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">Page</a></li>
+        <li><a href="">Portfolio</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Shop</a></li>
+        <li><a href="">Shortcodes</a></li>
+        <li><a href="">Features</a></li>
+        <li><a href="">Contact</a></li>
+    </ul>
+    <div>
+        <p>Quickly Setup Your Website</p>
+        <h1>Stepup is designed specially for Startups</h1>    
+    </div>
     <h2>100% Responsive Design</h2>
     <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin.</p>
     <h2>Unlimited Features</h2>
@@ -15,5 +37,5 @@
     <h2>Fully Customizable</h2>
     <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin.</p>
     <p>About Our Company</p>
-</body>
+ </body>
 </html>
