--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
         <li><a href="">Shortcodes</a></li>
         <li><a href="">Features</a></li>
         <li><a href="">Contact</a></li>
+        <li><button></button></li>
+        <li><button></button></li>
     </ul>
     <div>
         <p>Quickly Setup Your Website</p>
         <h1>Stepup is designed specially for Startups</h1>    
     </div>
+    <a href="#">Buy Now !</a>
+    
     <h2>100% Responsive Design</h2>
     <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin.</p>
     <h2>Unlimited Features</h2>
