--- a/Базовый курс/www/index.html
+++ b/Базовый курс/www/index.html
@@ -4,69 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Raleway:400,600,800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Raleway:400,600,700,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <div>
-            <ul class="info">
-                <li class="info-item">Have any questions?</li>
-                <li class="info-item"><a class="info-link" href="mailto:support@example.com">support@example.com</a></li>
-                <li class="info-item"><a class="info-link" href="tel:+1814251152">+1 814 251 152</a></li>
-            </ul>
-            <ul class="info">
-                <li class="info-item"><a class="info-link" href="">Login</a></li>
-                <li class="info-item"><a class="info-link" href="">Register</a></li>
-            </ul>    
+        <div class="wrapper">
+            <div>
+                <ul class="info">
+                    <li class="info-item">Have any questions?</li>
+                    <li class="info-item"><a class="info-link" href="mailto:support@example.com">support@example.com</a></li>
+                    <li class="info-item"><a class="info-link" href="tel:+1814251152">+1 814 251 152</a></li>
+                </ul>
+                <ul class="info">
+                    <li class="info-item"><a class="info-link" href="">Login</a></li>
+                    <li class="info-item"><a class="info-link" href="">Register</a></li>
+                </ul>    
+            </div>
+            <img src="img/logo.svg" alt="Logo">
+            <nav>
+                <ul class="nav">
+                    <li class="nav-item"><a class="nav-link active" href="">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">Page</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">Shop</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">Shortcodes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">Features</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
+                    <li><button></button></li>
+                    <li><button></button></li>   
+                </ul>    
+            </nav>
+            <div class="title center">
+                <div class="element element-top"></div>
+                <p>Quickly Setup Your Website</p>
+                <h1>Stepup is designed specially for Startups</h1>    
+            </div>
+            <div class="element element-bottom"></div>
+            <a href="#" class="btn">Buy Now !</a>   
         </div>
-        <img src="img/logo.svg" alt="Logo">
-        <nav>
-            <ul class="nav">
-                <li class="nav-item"><a class="nav-link active" href="">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Page</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Blog</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Shop</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Shortcodes</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Features</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
-                <li><button></button></li>
-                <li><button></button></li>   
-            </ul>    
-        </nav>
-        <div class="title center">
-            <p>Quickly Setup Your Website</p>
-            <h1>Stepup is designed specially for Startups</h1>    
-        </div>
-        <a href="#" class="btn">Buy Now !</a>
     </header>
     <main>
-        <div class="box center">
-            <div class="box-item">
-                <h2>100% Responsive Design</h2>
-                <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin.</p>        
-            </div>
-            <div class="box-item">
-                <h2>Unlimited Features</h2>
-                <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin.</p>
-            </div>
-            <div class="box-item">
-                <h2>Fully Customizable</h2>
-                <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin.</p>    
-            </div>
+        <div class="wrapper">
+            <div class="box center">
+                <div class="box-item">
+                    <h2>100% Responsive Design</h2>
+                    <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin.</p>        
+                </div>
+                <div class="box-item">
+                    <h2>Unlimited Features</h2>
+                    <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin.</p>
+                </div>
+                <div class="box-item">
+                    <h2>Fully Customizable</h2>
+                    <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin.</p>    
+                </div>
+            </div>    
         </div>
-
-        <h2 class="title-h2"><span>About Our Company</span>Who We Are?</h2> 
-        <div></div>
-        <p class="description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.</p>
-        <p class="description">Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos.</p>
-        <ul class="list-description">
-            <li>Simplify compelling innovation and long-term high.</li>
-            <li>Quickly streamline focused deliverables whereas progressive.</li>
-        </ul>
-        <a href="#">Read More</a>    
-        <div class="center">
+        <div class="wrapper">
+            <h2 class="title-h2"><span>About Our Company</span>Who We Are?</h2> 
+            <div></div>
+            <p class="description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.</p>
+            <p class="description">Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos.</p>
+            <ul class="list-description">
+                <li>Simplify compelling innovation and long-term high.</li>
+                <li>Quickly streamline focused deliverables whereas progressive.</li>
+            </ul>
+            <a href="#">Read More</a>        
+        </div>
+        <div class="center wrapper">
             <h2 class="title-h2"><span>See Portfolio</span>Recent Works</h2> 
             <div></div>
             <p class="description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>    
