--- a/Базовый курс/www/index.html
+++ b/Базовый курс/www/index.html
@@ -104,8 +104,8 @@
                     <p>Ui Design / Website</p>
                 </div>
                 <div class="photo-btn">
-                    <a href=""><i class="fas fa-search"></i></a>
-                    <a href=""><i class="fas fa-link"></i></a>
+                    <a class="photo-btn-item" href=""><i class="fas fa-search"></i></a>
+                    <a class="photo-btn-item" href=""><i class="fas fa-link"></i></a>
                 </div>
             </div>
             <div class="photo-item">
