--- a/Базовый курс/www/index.html
+++ b/Базовый курс/www/index.html
@@ -137,7 +137,55 @@
                 </div>
             </div>
         </div>
+        <div class="wrapper">
+            <div class="grid">
+                <div class="grid-item">
+                    <div class="grid-line">    
+                        <div class="box-icon box-icon-min"><i class="far fa-eye"></i></div>
+                        <div class="grid-line-text">
+                            <h3>Retina Ready</h3>
+                            <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>   
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <h3>Unlock Features</h3>
+                    <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                </div>
+                <div class="grid-item">
+                    <h3>Woocommerce</h3>
+                    <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                </div>
+                <div class="grid-item">
+                    <h3>Multi Purpose</h3>
+                    <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                </div>
+                <div class="grid-item">
+                    <h3>Demo Content</h3>
+                    <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                </div>
+                <div class="grid-item">
+                    <h3>Weekly Update</h3>
+                    <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                </div>
+                <div class="grid-item">
+                    <h3>Custom Sliders</h3>
+                    <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                </div>
+                <div class="grid-item">
+                    <h3>Unique Blog</h3>
+                    <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                </div>
+                <div class="grid-item">
+                    <h3>User Friendly</h3>
+                    <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                </div>
+            </div>
+        </div>
     </main>
+    <footer>
+
+    </footer>
     <script src="js/all.min.js"></script>
  </body>
 </html>
