Add icon for grid

--- a/Базовый курс/www/index.html
+++ b/Базовый курс/www/index.html
@@ -149,36 +149,76 @@
                     </div>
                 </div>
                 <div class="grid-item">
-                    <h3>Unlock Features</h3>
-                    <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                    <div class="grid-line">    
+                        <div class="box-icon box-icon-min"><i class="fas fa-lock"></i></i></div>
+                        <div class="grid-line-text">
+                            <h3>Unlock Features</h3>
+                            <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                        </div>
+                    </div>   
                 </div>
                 <div class="grid-item">
-                    <h3>Woocommerce</h3>
-                    <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                    <div class="grid-line">    
+                        <div class="box-icon box-icon-min"><i class="fas fa-shopping-cart"></i></i></div>
+                        <div class="grid-line-text">
+                            <h3>Woocommerce</h3>
+                            <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                        </div>
+                    </div>   
                 </div>
                 <div class="grid-item">
-                    <h3>Multi Purpose</h3>
-                    <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                    <div class="grid-line">    
+                        <div class="box-icon box-icon-min"><i class="fas fa-star"></i></i></i></div>
+                        <div class="grid-line-text">
+                            <h3>Multi Purpose</h3>
+                            <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                        </div>
+                    </div>   
                 </div>
                 <div class="grid-item">
-                    <h3>Demo Content</h3>
-                    <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                    <div class="grid-line">    
+                        <div class="box-icon box-icon-min"><i class="far fa-thumbs-up"></i></div>
+                        <div class="grid-line-text">
+                            <h3>Demo Content</h3>
+                            <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                        </div>
+                    </div>   
                 </div>
                 <div class="grid-item">
-                    <h3>Weekly Update</h3>
-                    <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                    <div class="grid-line">    
+                        <div class="box-icon box-icon-min"><i class="fas fa-tint"></i></div>
+                        <div class="grid-line-text">
+                            <h3>Weekly Update</h3>
+                            <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                        </div>
+                    </div>   
                 </div>
                 <div class="grid-item">
-                    <h3>Custom Sliders</h3>
-                    <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                    <div class="grid-line">    
+                        <div class="box-icon box-icon-min"><i class="fas fa-sliders-h"></i></div>
+                        <div class="grid-line-text">
+                            <h3>Custom Sliders</h3>
+                            <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                        </div>
+                    </div>   
                 </div>
                 <div class="grid-item">
-                    <h3>Unique Blog</h3>
-                    <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                    <div class="grid-line">    
+                        <div class="box-icon box-icon-min"><i class="fas fa-rss"></i></i></div>
+                        <div class="grid-line-text">
+                            <h3>Unique Blog</h3>
+                            <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                        </div>
+                    </div>   
                 </div>
                 <div class="grid-item">
-                    <h3>User Friendly</h3>
-                    <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                    <div class="grid-line">    
+                        <div class="box-icon box-icon-min"><i class="fas fa-user"></i></div>
+                        <div class="grid-line-text">
+                            <h3>User Friendly</h3>
+                            <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+                        </div>
+                    </div>   
                 </div>
             </div>
         </div>
