--- a/Базовый курс/www/index.html
+++ b/Базовый курс/www/index.html
@@ -222,6 +222,59 @@
                 </div>
             </div>
         </div>
+        <div class="page page-bg">
+            <div class="wrapper">
+                <div class="title center">
+                    <div class="element element-top"></div>
+                    <p>Hand Crafted with Love</p>
+                    <h1>Beautiful Websites for all</h1>    
+                    <p class="center"><a href="#" class="btn">Take a Tour</a></p>   
+                    <div class="element element-bottom"></div>
+                </div>
+            </div>
+        </div>
+        <div class="page page-team">
+            <div class="center wrapper">
+                <h2 class="title-h2"><span>Creative Team</span>Meat Our Team</h2> 
+                <div class="line-center"></div>
+                <p class="description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>    
+                <div class="team">
+                    <div class="team-item">
+                        <div class="team-thumb"><img src="img/team-1.png" alt="Justin Doe"></div>
+                        <p class="team-position">(Sr. Advisor)</p>
+                        <p class="team-name">Justin Doe</p>
+                        <p class="description">People who already have strong trust relships with you. akshay hello world.</p>
+                        <ul class="team-social">
+                            <li class="team-social-item"><a href="" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                            <li class="team-social-item"><a href="" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                            <li class="team-social-item"><a href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="team-item">
+                        <div class="team-thumb"><img src="img/team-2.png" alt="Dia Josaf"></div>
+                        <p class="team-position">(Sr. Advisor)</p>
+                        <p class="team-name">Dia Josaf</p>
+                        <p class="description">People who already have strong trust relships with you. akshay hello world.</p>
+                        <ul class="team-social">
+                            <li class="team-social-item"><a href="" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                            <li class="team-social-item"><a href="" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                            <li class="team-social-item"><a href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="team-item">
+                        <div class="team-thumb"><img src="img/team-3.png" alt="Martin Gips"></div>
+                        <p class="team-position">(Sr. Advisor)</p>
+                        <p class="team-name">Martin Gips</p>
+                        <p class="description">People who already have strong trust relships with you. akshay hello world.</p>
+                        <ul class="team-social">
+                            <li class="team-social-item"><a href="" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                            <li class="team-social-item"><a href="" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                            <li class="team-social-item"><a href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                        </ul>
+                    </div>
+                </div>   
+            </div> 
+        </div>
     </main>
     <footer>
 
