--- a/Базовый курс/www/index.html
+++ b/Базовый курс/www/index.html
@@ -150,7 +150,7 @@
                 </div>
                 <div class="grid-item">
                     <div class="grid-line">    
-                        <div class="box-icon box-icon-min"><i class="fas fa-lock"></i></i></div>
+                        <div class="box-icon box-icon-min"><i class="fas fa-lock"></i></div>
                         <div class="grid-line-text">
                             <h3>Unlock Features</h3>
                             <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
@@ -159,7 +159,7 @@
                 </div>
                 <div class="grid-item">
                     <div class="grid-line">    
-                        <div class="box-icon box-icon-min"><i class="fas fa-shopping-cart"></i></i></div>
+                        <div class="box-icon box-icon-min"><i class="fas fa-shopping-cart"></i></div>
                         <div class="grid-line-text">
                             <h3>Woocommerce</h3>
                             <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
@@ -168,7 +168,7 @@
                 </div>
                 <div class="grid-item">
                     <div class="grid-line">    
-                        <div class="box-icon box-icon-min"><i class="fas fa-star"></i></i></i></div>
+                        <div class="box-icon box-icon-min"><i class="fas fa-star"></i></div>
                         <div class="grid-line-text">
                             <h3>Multi Purpose</h3>
                             <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
@@ -275,6 +275,44 @@
                 </div>   
             </div> 
         </div>
+        <div class="page page-gray">
+            <div class="center wrapper">
+                <h2 class="title-h2"><span>Website Mockup</span>Our Complete Pack</h2> 
+                <div class="line-center"></div>
+                <p class="description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>    
+                <img class="screen" src="img/screen.png" alt="Screen">
+            </div>    
+        </div>
+        <div class="page page-stat">
+            <div class="wrapper">
+                <div class="box-stat">
+                    <div class="box-stat-item">
+                        <i class="fas fa-star"></i>
+                        <h3>
+                            <span>Project Complete</span>2570
+                        </h3>
+                    </div>
+                    <div class="box-stat-item">
+                        <i class="fas fa-user"></i>
+                        <h3>
+                            <span>Happy Customers</span>1487
+                        </h3>
+                    </div>
+                    <div class="box-stat-item">
+                        <i class="fas fa-trophy"></i>
+                        <h3>
+                            <span>Awards Winner</span>547
+                        </h3>
+                    </div>
+                    <div class="box-stat-item">
+                        <i class="fas fa-mug-hot"></i>
+                        <h3>
+                            <span>Cup of Coffee</span>2507
+                        </h3>
+                    </div>  
+                </div>
+            </div>
+        </div>    
     </main>
     <footer>
 
