--- a/Базовый курс/www/index.html
+++ b/Базовый курс/www/index.html
@@ -312,7 +312,34 @@
                     </div>  
                 </div>
             </div>
-        </div>    
+        </div> 
+        <div class="page page-blog">
+            <div class="wrapper">
+                <h2 class="title-h2"><span>Stay Always Updated</span>LATEST Blog Post</h2> 
+                <div class="line-center"></div>
+                <p class="description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>    
+                <div class="blog">
+                    <div>
+                        <div>
+                            <div class="thumb-blog">
+                                <img src="" alt="">
+                                <div class="blog-share">
+                                    <button></button>
+                                    <button></button>
+                                </div>
+                            </div>
+                            <div class="text-log">
+                                <h3></h3>
+                                <ul>
+                                    <li>by <a href="">admin</a></li>
+                                    
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>   
     </main>
     <footer>
 
