Add blog and images

--- a/Базовый курс/www/index.html
+++ b/Базовый курс/www/index.html
@@ -315,11 +315,13 @@
         </div> 
         <div class="page page-blog">
             <div class="wrapper">
-                <h2 class="title-h2"><span>Stay Always Updated</span>LATEST Blog Post</h2> 
-                <div class="line-center"></div>
-                <p class="description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>    
+                <div class="center">
+                    <h2 class="title-h2"><span>Stay Always Updated</span>LATEST Blog Post</h2> 
+                    <div class="line-center"></div>
+                    <p class="description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>        
+                </div>
                 <div class="blog">
-                    <div>
+                    <div class="blog-item">
                         <div>
                             <div class="thumb-blog">
                                 <img src="" alt="">
@@ -329,10 +331,72 @@
                                 </div>
                             </div>
                             <div class="text-log">
-                                <h3></h3>
+                                <h3>Blog Image Post</h3>
                                 <ul>
                                     <li>by <a href="">admin</a></li>
-                                    
+                                    <li>Sept. 29, 2020</li>
+                                    <p>Sollicitudin, lorem quis bibe u auctor, nisi elit conseuat ipsu, nec sagittis sem ni id elit. Duis sed odio sit amet nibh vulpute cursus. Proin gravida nibh vel velit auctor aliquet.</p>
+                                    <a href="">Read More</a>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog-item">
+                        <div>
+                            <div class="thumb-blog">
+                                <img src="" alt="">
+                                <div class="blog-share">
+                                    <button></button>
+                                    <button></button>
+                                </div>
+                            </div>
+                            <div class="text-log">
+                                <h3>Blog Image Post</h3>
+                                <ul>
+                                    <li>by <a href="">admin</a></li>
+                                    <li>Sept. 29, 2020</li>
+                                    <p>Sollicitudin, lorem quis bibe u auctor, nisi elit conseuat ipsu, nec sagittis sem ni id elit. Duis sed odio sit amet nibh vulpute cursus. Proin gravida nibh vel velit auctor aliquet.</p>
+                                    <a href="">Read More</a>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog-item">
+                        <div>
+                            <div class="thumb-blog">
+                                <img src="" alt="">
+                                <div class="blog-share">
+                                    <button></button>
+                                    <button></button>
+                                </div>
+                            </div>
+                            <div class="text-log">
+                                <h3>Blog Image Post</h3>
+                                <ul>
+                                    <li>by <a href="">admin</a></li>
+                                    <li>Sept. 29, 2020</li>
+                                    <p>Sollicitudin, lorem quis bibe u auctor, nisi elit conseuat ipsu, nec sagittis sem ni id elit. Duis sed odio sit amet nibh vulpute cursus. Proin gravida nibh vel velit auctor aliquet.</p>
+                                    <a href="">Read More</a>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog-item">
+                        <div>
+                            <div class="thumb-blog">
+                                <img src="" alt="">
+                                <div class="blog-share">
+                                    <button></button>
+                                    <button></button>
+                                </div>
+                            </div>
+                            <div class="text-log">
+                                <h3>Blog Image Post</h3>
+                                <ul>
+                                    <li>by <a href="">admin</a></li>
+                                    <li>Sept. 29, 2020</li>
+                                    <p>Sollicitudin, lorem quis bibe u auctor, nisi elit conseuat ipsu, nec sagittis sem ni id elit. Duis sed odio sit amet nibh vulpute cursus. Proin gravida nibh vel velit auctor aliquet.</p>
+                                    <a href="">Read More</a>
                                 </ul>
                             </div>
                         </div>
