--- a/Базовый курс/www/index.html
+++ b/Базовый курс/www/index.html
@@ -322,12 +322,12 @@
                 </div>
                 <div class="blog">
                     <div class="blog-item">
-                        <div>
+                        <div class="blog-flex">
                             <div class="thumb-blog">
-                                <img src="" alt="">
+                                <img src="img/blog-1.png" alt="">
                                 <div class="blog-share">
-                                    <button></button>
-                                    <button></button>
+                                    <button class="comments">50</button>
+                                    <button class="like">98</button>
                                 </div>
                             </div>
                             <div class="text-log">
@@ -342,12 +342,12 @@
                         </div>
                     </div>
                     <div class="blog-item">
-                        <div>
+                        <div class="blog-flex">
                             <div class="thumb-blog">
-                                <img src="" alt="">
+                                <img src="img/blog-2.png" alt="">
                                 <div class="blog-share">
-                                    <button></button>
-                                    <button></button>
+                                    <button class="comments">50</button>
+                                    <button class="like">98</button>
                                 </div>
                             </div>
                             <div class="text-log">
@@ -362,12 +362,12 @@
                         </div>
                     </div>
                     <div class="blog-item">
-                        <div>
+                        <div class="blog-flex">
                             <div class="thumb-blog">
-                                <img src="" alt="">
+                                <img src="img/blog-3.png" alt="">
                                 <div class="blog-share">
-                                    <button></button>
-                                    <button></button>
+                                    <button class="comments">50</button>
+                                    <button class="like">98</button>
                                 </div>
                             </div>
                             <div class="text-log">
@@ -382,12 +382,12 @@
                         </div>
                     </div>
                     <div class="blog-item">
-                        <div>
+                        <div class="blog-flex">
                             <div class="thumb-blog">
-                                <img src="" alt="">
+                                <img src="img/blog-4.png" alt="">
                                 <div class="blog-share">
-                                    <button></button>
-                                    <button></button>
+                                    <button class="comments">50</button>
+                                    <button class="like">98</button>
                                 </div>
                             </div>
                             <div class="text-log">
