--- a/Базовый курс/www/index.html
+++ b/Базовый курс/www/index.html
@@ -325,19 +325,20 @@
                         <div class="blog-flex">
                             <div class="thumb-blog">
                                 <img src="img/blog-1.png" alt="">
+                                <p class="blog-eye"><i class="far fa-eye"></i></p>
                                 <div class="blog-share">
-                                    <button class="comments">50</button>
-                                    <button class="like">98</button>
+                                    <button class="comments"><a href=""><i class="fas fa-comment"></i><span>50</span></a></button>
+                                    <button class="like"><a href=""><i class="fas fa-thumbs-up"></i><span>98</span></a></button>
                                 </div>
                             </div>
-                            <div class="text-log">
+                            <div class="text-blog">
                                 <h3>Blog Image Post</h3>
                                 <ul>
                                     <li>by <a href="">admin</a></li>
                                     <li>Sept. 29, 2020</li>
-                                    <p>Sollicitudin, lorem quis bibe u auctor, nisi elit conseuat ipsu, nec sagittis sem ni id elit. Duis sed odio sit amet nibh vulpute cursus. Proin gravida nibh vel velit auctor aliquet.</p>
-                                    <a href="">Read More</a>
                                 </ul>
+                                <p>Sollicitudin, lorem quis bibe u auctor, nisi elit conseuat ipsu, nec sagittis sem ni id elit. Duis sed odio sit amet nibh vulpute cursus. Proin gravida nibh vel velit auctor aliquet.</p>
+                                <a href=""><span>Read More</span><i class="fas fa-long-arrow-alt-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -345,19 +346,20 @@
                         <div class="blog-flex">
                             <div class="thumb-blog">
                                 <img src="img/blog-2.png" alt="">
+                                <p class="blog-eye"><i class="far fa-eye"></i></p>
                                 <div class="blog-share">
-                                    <button class="comments">50</button>
-                                    <button class="like">98</button>
+                                    <button class="comments"><a href=""><i class="fas fa-comment"></i><span>50</span></a></button>
+                                    <button class="like"><a href=""><i class="fas fa-thumbs-up"></i><span>98</span></a></button>
                                 </div>
                             </div>
-                            <div class="text-log">
+                            <div class="text-blog">
                                 <h3>Blog Image Post</h3>
                                 <ul>
                                     <li>by <a href="">admin</a></li>
                                     <li>Sept. 29, 2020</li>
-                                    <p>Sollicitudin, lorem quis bibe u auctor, nisi elit conseuat ipsu, nec sagittis sem ni id elit. Duis sed odio sit amet nibh vulpute cursus. Proin gravida nibh vel velit auctor aliquet.</p>
-                                    <a href="">Read More</a>
                                 </ul>
+                                <p>Sollicitudin, lorem quis bibe u auctor, nisi elit conseuat ipsu, nec sagittis sem ni id elit. Duis sed odio sit amet nibh vulpute cursus. Proin gravida nibh vel velit auctor aliquet.</p>
+                                <a href=""><span>Read More</span><i class="fas fa-long-arrow-alt-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -365,19 +367,20 @@
                         <div class="blog-flex">
                             <div class="thumb-blog">
                                 <img src="img/blog-3.png" alt="">
+                                <p class="blog-eye"><i class="far fa-eye"></i></p>
                                 <div class="blog-share">
-                                    <button class="comments">50</button>
-                                    <button class="like">98</button>
+                                    <button class="comments"><a href=""><i class="fas fa-comment"></i><span>50</span></a></button>
+                                    <button class="like"><a href=""><i class="fas fa-thumbs-up"></i><span>98</span></a></button>
                                 </div>
                             </div>
-                            <div class="text-log">
+                            <div class="text-blog">
                                 <h3>Blog Image Post</h3>
                                 <ul>
                                     <li>by <a href="">admin</a></li>
                                     <li>Sept. 29, 2020</li>
-                                    <p>Sollicitudin, lorem quis bibe u auctor, nisi elit conseuat ipsu, nec sagittis sem ni id elit. Duis sed odio sit amet nibh vulpute cursus. Proin gravida nibh vel velit auctor aliquet.</p>
-                                    <a href="">Read More</a>
                                 </ul>
+                                <p>Sollicitudin, lorem quis bibe u auctor, nisi elit conseuat ipsu, nec sagittis sem ni id elit. Duis sed odio sit amet nibh vulpute cursus. Proin gravida nibh vel velit auctor aliquet.</p>
+                                <a href=""><span>Read More</span><i class="fas fa-long-arrow-alt-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -385,28 +388,58 @@
                         <div class="blog-flex">
                             <div class="thumb-blog">
                                 <img src="img/blog-4.png" alt="">
+                                <p class="blog-eye"><i class="far fa-eye"></i></p>
                                 <div class="blog-share">
-                                    <button class="comments">50</button>
-                                    <button class="like">98</button>
+                                    <button class="comments"><a href=""><i class="fas fa-comment"></i><span>50</span></a></button>
+                                    <button class="like"><a href=""><i class="fas fa-thumbs-up"></i><span>98</span></a></button>
                                 </div>
                             </div>
-                            <div class="text-log">
+                            <div class="text-blog">
                                 <h3>Blog Image Post</h3>
                                 <ul>
                                     <li>by <a href="">admin</a></li>
                                     <li>Sept. 29, 2020</li>
-                                    <p>Sollicitudin, lorem quis bibe u auctor, nisi elit conseuat ipsu, nec sagittis sem ni id elit. Duis sed odio sit amet nibh vulpute cursus. Proin gravida nibh vel velit auctor aliquet.</p>
-                                    <a href="">Read More</a>
                                 </ul>
+                                <p>Sollicitudin, lorem quis bibe u auctor, nisi elit conseuat ipsu, nec sagittis sem ni id elit. Duis sed odio sit amet nibh vulpute cursus. Proin gravida nibh vel velit auctor aliquet.</p>
+                                <a href=""><span>Read More</span><i class="fas fa-long-arrow-alt-right"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>   
+        </div>  
+        <div class="page page-gray">
+            <div class="wrapper">
+                <div class="company">
+                    <div class="company-item company-one"></div>
+                    <div class="company-item company-two"></div>
+                    <div class="company-item company-three"></div>
+                    <div class="company-item company-four"></div>
+                    <div class="company-item company-five"></div>
+                    <div class="company-item company-six "></div>
+                </div>
+            </div>
+        </div> 
     </main>
     <footer>
-
+        <div class="footer">
+            <button id="btnUp" class="btn-footer"><i class="fas fa-angle-double-up"></i></button>
+            <div class="footer-bg">
+                <div class="wrapper">
+                    <div class="footer-text">
+                        <p>© Copyright 2018-19 - Design By Webstrot</p>
+                        <ul class="footer-list">
+                            <li><a href="">Home</a></li>
+                            <li><a href="">Page</a></li>
+                            <li><a href="">Portfolio</a></li>
+                            <li><a href="">Blog</a></li>
+                            <li><a href="">Features</a></li>
+                            <li><a href="">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
     <script src="js/all.min.js"></script>
  </body>
