--- a/Базовый курс/www/index.html
+++ b/Базовый курс/www/index.html
@@ -408,7 +408,7 @@
                 </div>
             </div>
         </div>  
-        <div class="page page-gray">
+        <div class="page page-company">
             <div class="wrapper">
                 <div class="company">
                     <div class="company-item company-one"></div>
@@ -442,5 +442,11 @@
         </div>
     </footer>
     <script src="js/all.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script>
+        $("#btnUp").click(function() {
+            $("html").animate({scrollTop: 0}, "slow");
+        });    
+    </script>
  </body>
 </html>
